# porto-features

./: .bumpversion.cfg  .cursorrules  .gitignore  .npmignore  .pre-commit-config.yaml  BDD_POLICY.md  BUGBOT.md  CHANGELOG.md  CONTRIBUTING.md  FEATURE_ANALYSIS.md  LICENSE  MANIFEST.in  Makefile  README.md  STEP_VOCABULARY.md  index.d.ts  index.js  package.json  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml  validation.yml
porto_features/: __init__.py
porto_features/features/: api_comprehensive_testing.feature  cli.feature  data_access.feature  pricing.feature  resolution.feature  restrictions.feature  services.feature  stamp_generation.feature  validation.feature
porto_features/fixtures/addresses/: origin_DE.json  restricted_UA.json  valid_CH.json  valid_DE.json  valid_FR.json  valid_GB.json  valid_NO.json  valid_UA.json  valid_US.json
scripts/: validate_features.py  validate_fixtures.py
tests/: test_publish.sh  test_validate_features.py  test_validate_fixtures.py
