[project]
name = "gruncellka-porto-features"
version = "0.2.1"
description = "Shared BDD feature files for Porto SDKs"
readme = "README.md"
requires-python = ">=3.13"
license = {file = "LICENSE"}
keywords = ["bdd", "gherkin", "cucumber", "features", "porto"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
authors = [
    {name = "gruncellka"}
]

[project.urls]
Homepage = "https://github.com/gruncellka/porto-features"
Repository = "https://github.com/gruncellka/porto-features"
Issues = "https://github.com/gruncellka/porto-features/issues"
Changelog = "https://github.com/gruncellka/porto-features/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "bump2version>=1.0.0",
    "gherkin-official>=22.0.0,<23.0.0",
    "gherlint>=0.4.0",
    "pre-commit>=3.5.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.5",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["porto_features"]
package-dir = {"" = "."}

# Ship only *.feature and *.json from fixtures (no Python in features/fixtures)
[tool.setuptools.package-data]
porto_features = ["features/*.feature", "fixtures/**/*.json"]

[tool.ruff]
line-length = 100
target-version = "py313"

# Enable formatting (replaces Black)
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by ruff format)
]

[tool.ruff.lint.isort]
known-first-party = ["porto_features"]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["gherkin.*", "gherlint"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
source = ["scripts"]

[tool.coverage.report]
fail_under = 90
